--- a/.gitignore
+++ b/.gitignore
@@ -68,9 +68,12 @@ typings/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variables file
+# dotenv environment variable files
 .env
-.env.test
+.env.development.local
+.env.test.local
+.env.production.local
+.env.local
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
@@ -102,3 +105,5 @@ dist
 
 # TernJS port file
 .tern-port
+
+
